<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_snap_n_cook"
            android:icon="@drawable/snap_icon"
            android:title="@string/snap_n_cook" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/favorites_icon"
            android:title="@string/favorites" />
    </group>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout_icon"
        android:title="@string/logout_button" />

    <item
        android:id="@+id/nav_about_us"
        android:icon="@drawable/about_us_icon"
        android:title="@string/about_us" />
</menu>