<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/snap_n_cook"
    tools:context="com.riddhikakadia.brunchy.ui.SnapNCookActivity">

    <include
        android:id="@+id/snap_n_cook_toolbar"
        layout="@layout/simple_toolbar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:fontFamily="sans-serif"
        android:shadowColor="#000"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="20"
        android:text="@string/snap_n_cook_message"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/recipeButton"
        android:layout_alignTop="@+id/galleryButton"
        android:background="@drawable/snap_icon"
        android:clickable="true" />

    <Button
        android:id="@+id/recipeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/get_recipe"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/galleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/recipeButton"
        android:layout_below="@+id/textView"
        android:background="@drawable/gallery_icon"
        android:clickable="true" />

    <ListView
        android:id="@+id/item_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/recipeButton"
        android:layout_below="@+id/chooseItemsText"
        android:choiceMode="multipleChoice" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/cameraButton" />

    <TextView
        android:id="@+id/chooseItemsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/item_listView"
        android:layout_below="@+id/imageView"
        android:layout_toStartOf="@+id/cameraButton"
        android:text="@string/choose_ingredient"
        android:textColor="#000000"
        android:visibility="invisible" />
</RelativeLayout>

