<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_appbar_layout_height"
        android:fitsSystemWindows="true"
        android:layoutDirection="rtl"
        app:elevation="4dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:layoutDirection="rtl"
            app:collapsedTitleGravity="center_horizontal"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:expandedTitleGravity="bottom"
            app:expandedTitleMarginBottom="@dimen/expanded_title_margin_bottom"
            app:expandedTitleMarginStart="@dimen/expanded_toolbar_title_padding_left"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/recipe_detail_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:layoutDirection="rtl"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <ImageButton
                    android:id="@+id/action_up"
                    android:layout_width="@dimen/action_up_button_layout_width"
                    android:layout_height="?actionBarSize"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/action_up"
                    android:paddingBottom="@dimen/action_up_button_padding"
                    android:paddingTop="@dimen/action_up_button_padding"
                    android:src="@drawable/up_button_icon"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/detail_screen_summary" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:cardElevation="2dp">

                <TextView
                    android:id="@+id/ingredient_text_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_marginStart="8dp"
                    android:layoutDirection="rtl"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/ingredient_text_header"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ingredient_texts"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
                    android:paddingBottom="4dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp"
                    android:textColor="@android:color/black"
                    android:textColorLink="@color/colorAccent"
                    android:textSize="16sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/health_labels_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                app:cardElevation="2dp">

                <TextView
                    android:id="@+id/health_labels_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_marginStart="8dp"
                    android:layoutDirection="rtl"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/health_labels_header"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/health_labels"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
                    android:paddingBottom="4dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp"
                    android:textColor="@android:color/black"
                    android:textColorLink="@color/colorAccent"
                    android:textSize="16sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="510dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                app:cardElevation="2dp">

                <TextView
                    android:id="@+id/nutrition_info_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layoutDirection="rtl"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/nutrition_info_header"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <GridView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/nutrition_gridview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="40dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="25dp"
                    android:numColumns="2" />

                <ImageView
                    android:id="@+id/edamam_attribution"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:src="@drawable/edamam_attibution" />

            </android.support.v7.widget.CardView>

            <include layout="@layout/detail_screen_action_buttons" />

            <View
                android:layout_width="match_parent"
                android:layout_height="200dp" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favorite_recipe_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="52dp"
        android:layout_marginRight="24dp"
        android:contentDescription="@string/action_favorite"
        android:layoutDirection="rtl"
        android:src="@drawable/favourite_icon_non_selected"
        app:backgroundTint="@color/colorAccent"
        app:elevation="6dp"
        app:fabSize="auto"
        app:rippleColor="@color/colorPrimary" />

    <Button
        android:id="@+id/recipe_link_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/get_recipe_directions"
        android:textAlignment="center" />

</android.support.design.widget.CoordinatorLayout>